# darkroom

./: .gitignore  2026-03-23-digital-darkroom-design.md  2026-03-23-digital-darkroom-design_副本.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: exif_engine.rs  fs_handler.rs  mod.rs
src/components/: AutocompleteInput.tsx  ErrorBoundary.tsx  LocationInput.tsx  VectorFilmCanister.tsx  VectorFilmCanisterDemo.tsx
src/components/workspace/: WorkspaceCanvas.tsx
src/designs/darkroom-ritual/: ChemicalBath.tsx  EnlargerStation.tsx  FilmSelector.tsx  README.md  index.tsx
src/designs/processing-line/: BatchImporter.tsx  FrameEditor.tsx  QuickFillForm.tsx  README.md  TimelineStrip.tsx  index.tsx  mockData.ts  types.ts
src/types/: index.ts
